2008-03-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (pushSide, genPcall),
	* src/hc08/gen.c (pushSide, genPcall): synchronized with mcs51
	* src/mcs51/gen.c: cosmetic changes
	* support/regression/fwk/include/testfwk.h: added macro reentrant
	* support/regression/tests/bug1908493.c: new, added

2008-03-08 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* src/SDCCdebug.c:, as/link/lkaomf51.c: Fixed bug 1909409: Pdata in OMF file

2008-03-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (pushSide, genPcall): fixed bug 1908493
	* src/SDCCmain.c (preProcess): removed -DSDCC_PARMS_IN_BANK1 because it is
	  already set in ds390/main.c and mcs51/main.c

2008-03-07 Raphael Neider <rneider AT web.de>

	* src/regression/init0.c: new test for initialized arrays of function
	  pointers
	* src/regression/Makefile: made a bit more flexible, added init0.c
	* src/pic/glue.c (emitIvals): hacky fix for initializing from function
	  pointers, closes #1427663

2008-03-05 Borut Razem <borut.razem AT siol.net>

	* dos/sdccman.lyx: docummented predefined macros SDCC_REVISION,
	  SDCC_PARMS_IN_BANK1, SDCC_FLOAT_REENT and SDCC_INT_LONG_REENT

2008-03-05 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* support/librarian/sdcclib.c:Added feature request 1908061:
	  Synchronise sdcclib commands with ar.

2008-03-04 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCmain.c: added predefined macros SDCC_REVISION (RFE #1907229),
	  and (depending on corresponding compiler option) SDCC_PARMS_IN_BANK1,
	  SDCC_FLOAT_REENT, SDCC_INT_LONG_REENT
	* device/include/mcs51/compiler.h: removed umlauts, added double
	  underscore

2008-03-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCptropt.c (ptrPseudoSymConvert): fixed bug 1536762
	* support/regression/tests/bug1536762.c: new, added
	* src/SDCCutil.c,
	* src/SDCCutil.h: added getBuildDate()
	* src/SDCCmain.c (printVersionInfo),
	* src/SDCCglue.c (initialComments): use getBuildDate() instead of